--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,16 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+#container{
+    width: 70%;
+    padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#post{
+    color: green;
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid darkblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
