--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+#cabecera{
+    background: green;
+    color: honeydew;
+    font-weight: bold;
+}
 #container{
     width: 70%;
     padding: 1em;
