--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 #post{
-    color: green;
+    color: blue;
     width: 70%;
     padding: 1em;
     text-align: left;
     border: 1px solid darkblue;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
