--- a/css/styles.css
+++ b/css/styles.css
@@ -19,5 +19,5 @@ body{
     padding: 1em;
     text-align: left;
     border: 1px solid darkblue;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
