--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,6 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid darkblue;
-    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid green;
+    font-family: 'Courier New', Courier, monospace;
 }
