--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,6 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid pink;
+    border: 1px solid darkblue;
     font-family: 'Courier New', Courier, monospace;
 }
